--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -1,4 +1,6 @@
 .btn {
+  font-size: medium;
+  width: 50%;
   margin: 5px;
   border-radius: 0.375rem;
   color: white;
@@ -19,5 +21,7 @@
 }
 .btn:hover {
   --tw-text-opacity: 1;
-  color: rgb(253 224 71 / var(--tw-text-opacity));
+  color: rgb(175, 245, 129);
+  font-weight: bold;
+  /* color: rgb(253 224 71 / var(--tw-text-opacity)); */
 }
